# hygiene_mnwe

./: .gitignore  Cargo.toml  README.md  autotoy.toml  default.nix
.reuse/: dep5
autorun/: Cargo.toml
autorun/src/: main.rs  make_readme.rs
autotoy/: Cargo.toml
autotoy/src/: make_readme.rs
container/: Cargo.toml
container/payload/: Cargo.toml
container/payload/src/: lib.rs
container/src/: lib.rs  main.rs
indirection/: Cargo.toml
indirection/src/: lib.rs
indirector/: Cargo.toml
indirector/src/: lib.rs
macro_container/: Cargo.toml
macro_container/inside/: Cargo.toml
macro_container/inside/src/: lib.rs
macro_container/src/: hello_world.rs  lib.rs  main.rs
macro_inside/: Cargo.toml
macro_inside/goal/: Cargo.toml
macro_inside/goal/src/: lib.rs
macro_inside/src/: hello_world.rs  lib.rs  main.rs
src/: main.rs
user/: Cargo.toml
user/src/: main.rs
