[package]
name = "indirector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["original"]
original = ["macro_inside/original"]
wrapper = ["macro_inside/wrapper"]

[dependencies]
macro_inside = { version = "0.1.0", path = "../macro_inside", optional = true }
