[package]
name = "indirector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["original"]
original = ["container/original"]
wrapper = ["container/wrapper"]

[dependencies]
container = { version = "0.1.0", path = "../container", optional = true }
